Alignment fixes for Adds

--- a/src/app/pages/flight-itinerary/flight-itinerary.component.css
+++ b/src/app/pages/flight-itinerary/flight-itinerary.component.css
@@ -434,6 +434,6 @@ textarea.form-control {
     text-align: center;
     margin: 20px 0;
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    border: 1px solid var(--medium-gray);
+    /*box-shadow: var(--box-shadow);
+    border: 1px solid var(--medium-gray);*/
   }
