--- a/src/app/pages/image-to-word/image-to-word.component.css
+++ b/src/app/pages/image-to-word/image-to-word.component.css
@@ -31,8 +31,8 @@
     text-align: center;
     margin: 20px 0;
     border-radius: 8px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    border: 1px solid var(--medium-gray);
+    /*box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    border: 1px solid var(--medium-gray);*/
   }
   
   .upload-area {
