--- a/src/app/pages/img-compress/img-compress.component.css
+++ b/src/app/pages/img-compress/img-compress.component.css
@@ -42,8 +42,8 @@
     text-align: center;
     margin: 20px 0;
     border-radius: 8px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    border: 1px solid var(--medium-gray);
+    /*box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    border: 1px solid var(--medium-gray);*/
   }
   
   main {
@@ -328,8 +328,8 @@
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 30px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    border: 1px solid var(--medium-gray);
+    /*box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    border: 1px solid var(--medium-gray);*/
   }
   
   /* Loading spinner */
