--- a/src/app/pages/pdf-lock/pdf-lock.component.css
+++ b/src/app/pages/pdf-lock/pdf-lock.component.css
@@ -440,6 +440,6 @@
     text-align: center;
     margin: 20px 0;
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    border: 1px solid var(--medium-gray);
+    /*box-shadow: var(--box-shadow);
+    border: 1px solid var(--medium-gray);*/
   }
